# BlockModPy

./: LICENSE  README.md  pyproject.toml
BlockModPy/: block.py  block_item.py  connector.py  connector_segment_item.py  globals.py  network.py  scene_manager.py  socket.py  socket_item.py  xml_helpers.py  zoom_mesh_graphics_view.py
BlockModPyDemo/: debug_application.py  dialog_demo.py  main.py
BlockModPyDemo/resources/: BlockModDemoPy_rc.py
BlockModPyDemo/ui/: dialog.py  dialog.ui
